code/typescript/BestExecutionAnalyticsforSmarterTradingBEAST/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Best Execution Analytics for Smarter Trading (BEAST) client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3.0.0-blue)](https://developer.factset.com/api-catalog/)
[![npm](https://img.shields.io/badge/npm-v0.3.0-orange)](https://www.npmjs.com/package/@factset/sdk-bestexecutionanalyticsforsmartertradingbeast/v/0.3.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Enables clients to programmatically access the underlying data which powers the BEAST Liquidity Analytics (LA) and Transaction Cost Analysis (TCA) applications.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0.0
- SDK version: 0.3.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-bestexecutionanalyticsforsmartertradingbeast@0.3.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-bestexecutionanalyticsforsmartertradingbeast@0.3.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, LiquidityAnalyticsApi } = require('@factset/sdk-bestexecutionanalyticsforsmartertradingbeast');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new LiquidityAnalyticsApi();
const securityIds = ["FDS-US","AAPL-US","MX-CA"]; // [String] | ISIN for European securities, otherwise TICKER
const startDate = 2024-08-21; // Date | Date in the format YYYY-MM-DD
const endDate = 2024-08-29; // Date | Date in the format YYYY-MM-DD

// Call api endpoint
apiInstance.getLiquidityAnalytics(securityIds, startDate, endDate).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-bestexecutionanalyticsforsmartertradingbeast');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/beast/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*bestexecutionanalyticsforsmartertradingbeast.LiquidityAnalyticsApi* | [**getLiquidityAnalytics**](docs/LiquidityAnalyticsApi.md#getLiquidityAnalytics) | **GET** /tca/liquidity/liquidity-analytics | Get Liquidity Analytics
*bestexecutionanalyticsforsmartertradingbeast.LiquidityAnalyticsApi* | [**getLiquidityQuotes**](docs/LiquidityAnalyticsApi.md#getLiquidityQuotes) | **GET** /tca/liquidity/quotes | Get Liquidity Quotes
*bestexecutionanalyticsforsmartertradingbeast.LiquidityAnalyticsApi* | [**getLiquidityTrades**](docs/LiquidityAnalyticsApi.md#getLiquidityTrades) | **GET** /tca/liquidity/trades | Get Liquidity Trades
*bestexecutionanalyticsforsmartertradingbeast.LiquidityAnalyticsApi* | [**getLiquidityVolumeAnalytics**](docs/LiquidityAnalyticsApi.md#getLiquidityVolumeAnalytics) | **GET** /tca/liquidity/volume-analytics | Get Liquidity Volume Analytics
*bestexecutionanalyticsforsmartertradingbeast.MarketImpactApi* | [**getCostImpactV3**](docs/MarketImpactApi.md#getCostImpactV3) | **GET** /tca/market-impact/cost-impact | Get Cost Impact
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderFillCount**](docs/OrderDetailsApi.md#getOrderFillCount) | **GET** /tca/order/fill-count | Get Order Fill Count
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderIndexETF**](docs/OrderDetailsApi.md#getOrderIndexETF) | **GET** /tca/order/index-etf | Get Index ETF data
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderInfo**](docs/OrderDetailsApi.md#getOrderInfo) | **GET** /tca/order/order-info | Get Order Information
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderIntraStats**](docs/OrderDetailsApi.md#getOrderIntraStats) | **GET** /tca/order/intra-order-stats | Get Intra Order Stats
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderInvestmentTiming**](docs/OrderDetailsApi.md#getOrderInvestmentTiming) | **GET** /tca/order/investment-timing | Get Order Investment Timings
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderPriceTimeFills**](docs/OrderDetailsApi.md#getOrderPriceTimeFills) | **GET** /tca/order/price-time-fills | Get Price Time Fills
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderPriceTimeQuotes**](docs/OrderDetailsApi.md#getOrderPriceTimeQuotes) | **GET** /tca/order/price-time-quotes | Get Price Time Quotes
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderPriceTimeTrades**](docs/OrderDetailsApi.md#getOrderPriceTimeTrades) | **GET** /tca/order/price-time-trades | Get Price Time Trades
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderVolumePrice**](docs/OrderDetailsApi.md#getOrderVolumePrice) | **GET** /tca/order/volume-price | Get Order Volume Prices
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderVolumeTime**](docs/OrderDetailsApi.md#getOrderVolumeTime) | **GET** /tca/order/volume-time | Get Order Volume Times
*bestexecutionanalyticsforsmartertradingbeast.OrderDetailsApi* | [**getOrderVolumeVenue**](docs/OrderDetailsApi.md#getOrderVolumeVenue) | **GET** /tca/order/volume-venue | Get Order Volume Venues
*bestexecutionanalyticsforsmartertradingbeast.OrderSearchApi* | [**getFieldValues**](docs/OrderSearchApi.md#getFieldValues) | **GET** /tca/search/field-values | Get Order field values
*bestexecutionanalyticsforsmartertradingbeast.OrderSearchApi* | [**getOrders**](docs/OrderSearchApi.md#getOrders) | **GET** /tca/search/orders | Get Orders by field values
*bestexecutionanalyticsforsmartertradingbeast.OutliersApi* | [**getOutlierMetricsByPercentile**](docs/OutliersApi.md#getOutlierMetricsByPercentile) | **GET** /tca/outlier/metrics-by-percentile | Get Outlier Metrics by percentile
*bestexecutionanalyticsforsmartertradingbeast.OutliersApi* | [**getOutlierMetricsStandard**](docs/OutliersApi.md#getOutlierMetricsStandard) | **GET** /tca/outlier/metrics-standard | Get Outlier Metrics by standard deviation
*bestexecutionanalyticsforsmartertradingbeast.ReportsApi* | [**getParentAggregateAnalysis**](docs/ReportsApi.md#getParentAggregateAnalysis) | **GET** /tca/report/parent-aggregate-analysis | Get Parent Aggregate Analysis


## Documentation for Models

 - [bestexecutionanalyticsforsmartertradingbeast.AggregateMarketImpact](docs/AggregateMarketImpact.md)
 - [bestexecutionanalyticsforsmartertradingbeast.CostImpactResponseRootV3](docs/CostImpactResponseRootV3.md)
 - [bestexecutionanalyticsforsmartertradingbeast.CostImpactV3](docs/CostImpactV3.md)
 - [bestexecutionanalyticsforsmartertradingbeast.Error](docs/Error.md)
 - [bestexecutionanalyticsforsmartertradingbeast.ErrorResponse](docs/ErrorResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.FieldValuesResponse](docs/FieldValuesResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.FieldValuesResponseRoot](docs/FieldValuesResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.IndexETF](docs/IndexETF.md)
 - [bestexecutionanalyticsforsmartertradingbeast.IndexETFResponse](docs/IndexETFResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.IndexETFResponseRoot](docs/IndexETFResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.IntraOrderStat](docs/IntraOrderStat.md)
 - [bestexecutionanalyticsforsmartertradingbeast.IntraOrderStatResponse](docs/IntraOrderStatResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.IntraOrderStatResponseRoot](docs/IntraOrderStatResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.InvestmentTiming](docs/InvestmentTiming.md)
 - [bestexecutionanalyticsforsmartertradingbeast.InvestmentTimingResponse](docs/InvestmentTimingResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.InvestmentTimingResponseRoot](docs/InvestmentTimingResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.LiquidityAnalyticsResponse](docs/LiquidityAnalyticsResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.LiquidityAnalyticsResponseRoot](docs/LiquidityAnalyticsResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.MarketImpactQuoteAnalytics](docs/MarketImpactQuoteAnalytics.md)
 - [bestexecutionanalyticsforsmartertradingbeast.MarketImpactTradeAnalytics](docs/MarketImpactTradeAnalytics.md)
 - [bestexecutionanalyticsforsmartertradingbeast.MultiDayBenchmarks](docs/MultiDayBenchmarks.md)
 - [bestexecutionanalyticsforsmartertradingbeast.Order](docs/Order.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OrderFillCountResponse](docs/OrderFillCountResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OrderFillCountResponseRoot](docs/OrderFillCountResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OrderInfoResponse](docs/OrderInfoResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OrderInfoResponseRoot](docs/OrderInfoResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OrdersResponse](docs/OrdersResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OrdersResponseRoot](docs/OrdersResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.Outlier](docs/Outlier.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OutlierData](docs/OutlierData.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OutlierDataResult](docs/OutlierDataResult.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OutlierMetrics](docs/OutlierMetrics.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OutlierResponse](docs/OutlierResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OutlierResponseRoot](docs/OutlierResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.OutputStrategyBinData](docs/OutputStrategyBinData.md)
 - [bestexecutionanalyticsforsmartertradingbeast.PriceTimeFill](docs/PriceTimeFill.md)
 - [bestexecutionanalyticsforsmartertradingbeast.PriceTimeFillResponse](docs/PriceTimeFillResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.PriceTimeFillResponseRoot](docs/PriceTimeFillResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.PriceTimeQuote](docs/PriceTimeQuote.md)
 - [bestexecutionanalyticsforsmartertradingbeast.PriceTimeQuoteResponse](docs/PriceTimeQuoteResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.PriceTimeQuoteResponseRoot](docs/PriceTimeQuoteResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.PriceTimeTrade](docs/PriceTimeTrade.md)
 - [bestexecutionanalyticsforsmartertradingbeast.PriceTimeTradeResponse](docs/PriceTimeTradeResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.PriceTimeTradeResponseRoot](docs/PriceTimeTradeResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.QuotesAnalyticsResponseRoot](docs/QuotesAnalyticsResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.QuotesAndTradesAnalytics](docs/QuotesAndTradesAnalytics.md)
 - [bestexecutionanalyticsforsmartertradingbeast.QuotesAndTradesAnalyticsResponse](docs/QuotesAndTradesAnalyticsResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.ReportRecord](docs/ReportRecord.md)
 - [bestexecutionanalyticsforsmartertradingbeast.ReportResponse](docs/ReportResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.ReportResponseRoot](docs/ReportResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.TradesAnalyticsResponseRoot](docs/TradesAnalyticsResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumeAnalytic](docs/VolumeAnalytic.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumeAnalyticsResponseRootV3](docs/VolumeAnalyticsResponseRootV3.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumeAnalyticsResponseV3](docs/VolumeAnalyticsResponseV3.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumePrice](docs/VolumePrice.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumePriceBin](docs/VolumePriceBin.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumePriceMetrics](docs/VolumePriceMetrics.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumePriceResponse](docs/VolumePriceResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumePriceResponseRoot](docs/VolumePriceResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumeTime](docs/VolumeTime.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumeTimeResponse](docs/VolumeTimeResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumeTimeResponseRoot](docs/VolumeTimeResponseRoot.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumeVenue](docs/VolumeVenue.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumeVenueResponse](docs/VolumeVenueResponse.md)
 - [bestexecutionanalyticsforsmartertradingbeast.VolumeVenueResponseRoot](docs/VolumeVenueResponseRoot.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
